kubernetes/catalog/standardnotes-webui/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: standardnotes-webui
  namespace: standardnotes-webui
  labels:
    app.kubernetes.io/name: standardnotes-webui
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`standardnotes-webui.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: standardnotes-webui
          port: 80
  tls:
    secretName: int-rlservers-com-tls
